# electron-multiservice-test

./: README.md  build-linux.sh  build-run-linux.sh  build.sh
.github/prompts/: app.prompt.md
.github/workflows/: release-electron.yml
backend/: build.sh  settings.gradle.kts
backend/app/: build.gradle.kts
backend/app/src/main/kotlin/org/example/: App.kt  Server.kt
file-service/: Cargo.toml  build.sh
file-service-rust/src/: main.rs
frontend/: .gitignore  Dockerfile  build.sh  electron-builder.json  electron-main.js  index.html  package-lock.json  package.json  preload.js  resource-utils.js  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.tsx  electron.d.ts
