[package]
name = "file-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
serde_json = "1.0"
hyper = { version = "1", features = ["full"] }
